1. Метод .of [#358976]