@@ -4,7 +4,6 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.greaterThan;
@@ -33,7 +32,7 @@ public class DepDescCompTest {
 
     @Test
     public void sortDown() {
-        List<String> rsl = new ArrayList<>(Arrays.asList(
+        List<String> rsl = new ArrayList<>(List.of(
                 "K1/SK1",
                 "K1/SK1/SSK2",
                 "K2",
@@ -43,7 +42,7 @@ public class DepDescCompTest {
                 "K1/SK2",
                 "K2/SK1",
                 "K2/SK1/SSK2"));
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
