@@ -12,7 +12,7 @@ public class FunctionDiapTest {
     public void whenLinearFunctionThenLinearResults() {
         FunctionDiap function = new FunctionDiap();
         List<Double> result = function.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         Assert.assertEquals(result, expected);
     }
 
@@ -20,7 +20,7 @@ public class FunctionDiapTest {
     public void whenSuareFunctionThenSquareResults() {
         FunctionDiap function = new FunctionDiap();
         List<Double> result = function.diapason(5, 8, x -> (2 * x) * (2 * x) + 5 * x + 7);
-        List<Double> expected = Arrays.asList(132D, 181D, 238D);
+        List<Double> expected = List.of(132D, 181D, 238D);
         Assert.assertEquals(result, expected);
     }
 
@@ -28,7 +28,7 @@ public class FunctionDiapTest {
     public void whenIndicativeFunctionThenIndicativeResults() {
         FunctionDiap function = new FunctionDiap();
         List<Double> result = function.diapason(5, 8, x -> Math.pow(2, x));
-        List<Double> expected = Arrays.asList(32D, 64D, 128D);
+        List<Double> expected = List.of(32D, 64D, 128D);
         Assert.assertEquals(result, expected);
     }
 }
